<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nesfr_arm_only_description</name>
  <version>2.0.2</version>
  <description>
    URDF description for NESFR Robot Arm
  </description>

  <author>Jaeyoung Lee</author>

  <maintainer email="jylee0121@gmail.com">Jaeyoung Lee</maintainer>

  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/wom-ai/nesfr_arm_only/issues</url>
  <url type="repository">https://github.com/wom-ai/nesfr_arm_only</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
